# oauth-example-rs

./: Cargo.toml  Makefile
authorization_server/: Cargo.toml
authorization_server/src/: main.rs
authorization_server/template/: approve.html  index.html
client/: Cargo.toml
client/src/: main.rs
client/template/: index.html
mysql_client/: Cargo.toml
protected_resource/: Cargo.toml
redis_client/: Cargo.toml
redis_client/src/: lib.rs
