[package]
name = "authorization_server"
version = "0.1.0"
authors = ["dyoshikawa <dyoshikawa1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
base64 = "*"
tera = "*"
redis = "*"
redis_client = { path = "../redis_client" }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "*"
